header area compelete

--- a/index.html
+++ b/index.html
@@ -20,8 +20,22 @@
 </head>
 
 <body class="font-works-sons">
+    <header class="bg-[#F9F6E2] flex  flex-col-reverse md:flex-row items-center lg:px-32 lg:py-20 justify-center gap-10">
+        <!-- text section -->
+        <div class="text-center md:w-1/2 ">
+            <h2 class="text-3xl font-medium mb-8">---SALE FEVER---</h2>
+            <h1 class="font-bold text-5xl mb-10">Purchase TK 200 or <br> above & <span class="text-[#E527B2]">get 20% off</span></h1>
+            <div class="flex items-center gap-4 justify-center">
+                <p>Use Promo Code</p>
+                <button class="btn btn-primary text-white bg-[#E527B2] border-0 font-semibold">SELL200</button>
+            </div>
+        </div>
+        <!-- logo-section-->
+        <div>
+            <img class="w-[28rem]" src="images/Summer 1.png" alt="">
+        </div>
+    </header>
 
-    
     <!-- java script files -->
     <script src="utilities.js"></script>
     <script src="script.js"></script>
