javascript task complete

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                                 class="text-[#1111117F]"><span id="total">0</span>Tk</span></h2>
                         <h2 class="text-2xl font-medium"> Discount : <span
                                 class="text-[#1111117F]"><span id="discount-money">0</span>Tk</span></h2>
-                        <h2 class="text-2xl font-medium"> Total: <span class="text-[#1111117F]" id="total-amount"><span>0</span>Tk</span>
+                        <h2 class="text-2xl font-medium"> Total: <span class="text-[#1111117F]"><span  id="total-amount">0</span>Tk</span>
                         </h2>
                     </div>
                     <hr class="my-4 text-[#1111117F] w-[90%] mx-auto">
