same html bugs fixs

--- a/index.html
+++ b/index.html
@@ -114,9 +114,11 @@
                 <h1 class="font-semibold text-4xl mb-10">Sportswear</h1>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5 mb-10">
                     <!-- Sportswear item -1 -->
-                    <div onclick="countItems('Sportswear-item-1-name','Sportswear-item-1-price')" class=" card  shadow-xl text-center px-10 py-5 bg-white">
-                        <img class="bg-[#1111110D] p-10 w-[300px] h-[200px] rounded-md  mx-auto" src="images/prod4.png"
+                    <div onclick="countItems('Sportswear-item-1-name','Sportswear-item-1-price')" class=" card h-[300px] w-[250px] shadow-xl text-center px-3 py-3 bg-white">
+                        <div class="bg-[#1111110D] rounded-md">
+                            <img class="mx-auto h-32 w-28" src="images/prod4.png"
                             alt="Shoes" />
+                        </div>
                         <div class="card-body">
                             <!-- rating -->
                             <div>
@@ -133,9 +135,11 @@
                         </div>
                     </div>
                     <!-- Sportswear item -2 -->
-                    <div onclick="countItems('Sportswear-item-2-name','Sportswear-item-2-price')" class="card  shadow-xl text-center px-10 py-5 bg-white">
-                        <img class="bg-[#1111110D] w-[300px] h-[200px] p-10 rounded-md  mx-auto" src="images/prod5.png"
+                    <div onclick="countItems('Sportswear-item-2-name','Sportswear-item-2-price')" class="card  shadow-xl text-center h-[300px] w-[250px] px-3 py-3 bg-white">
+                        <div class="bg-[#1111110D] rounded-md">
+                            <img class="mx-auto h-32 w-28" src="images/prod5.png"
                             alt="Shoes" />
+                        </div>
                         <div class="card-body">
                             <!-- rating -->
                             <div>
@@ -152,9 +156,11 @@
                         </div>
                     </div>
                     <!-- Sportswear item -3 -->
-                    <div onclick="countItems('Sportswear-item-3-name','Sportswear-item-3-price')" class="card  shadow-xl text-center px-10 py-5 bg-white">
-                        <img class="bg-[#1111110D] w-[300px] h-[200px] p-10 rounded-md  mx-auto " src="images/prod6.png"
+                    <div onclick="countItems('Sportswear-item-3-name','Sportswear-item-3-price')" class="card  shadow-xl text-center h-[300px] w-[250px] px-3 py-3 bg-white">
+                        <div class="bg-[#1111110D] rounded-md">
+                            <img class="mx-auto h-32 w-28" src="images/prod6.png"
                             alt="Shoes" />
+                        </div>
                         <div class="card-body">
                             <!-- rating -->
                             <div>
@@ -175,9 +181,11 @@
                 <h1 class="font-semibold text-4xl mb-10">Furniture</h1>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5 mb-10">
                     <!-- kitchen item -1 -->
-                    <div onclick="countItems('Furniture-item-1-name','Furniture-item-1-price')" class="card  shadow-xl text-center px-10 py-5 bg-white">
-                        <img class="bg-[#1111110D] w-[300px] h-[200px] p-10 rounded-md  mx-auto" src="images/prod7.png"
+                    <div onclick="countItems('Furniture-item-1-name','Furniture-item-1-price')" class="card  shadow-xl text-center h-[300px] w-[250px] px-3 py-3 bg-white">
+                        <div class="bg-[#1111110D] rounded-md">
+                            <img class="mx-auto h-32 w-28" src="images/prod7.png"
                             alt="Shoes" />
+                        </div>
                         <div class="card-body">
                             <!-- rating -->
                             <div>
@@ -189,14 +197,16 @@
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#FFC107]" />
                                 </div>
                             </div>
-                            <h2 id="Furniture-item-1-name" class="text-xl font-semibold">Single Relax Chair</h2>
+                            <h2 id="Furniture-item-1-name" class="text-xl font-semibold">Relax Chair</h2>
                             <p class="text-[#1111117F] text-xl"><span id="Furniture-item-1-price">185.00</span>Tk </p>
                         </div>
                     </div>
                     <!-- kitchen item -2 -->
-                    <div onclick="countItems('Furniture-item-2-name','Furniture-item-2-price')" class="card  shadow-xl text-center px-10 py-5 bg-white">
-                        <img class="bg-[#1111110D] w-[300px] h-[200px] p-10 rounded-md  mx-auto" src="images/prod8.png"
+                    <div onclick="countItems('Furniture-item-2-name','Furniture-item-2-price')" class="card  shadow-xl text-center h-[300px] w-[250px] px-3 py-3 bg-white">
+                        <div class="bg-[#1111110D] rounded-md">
+                            <img class="mx-auto h-32 w-28" src="images/prod8.png"
                             alt="Shoes" />
+                        </div>
                         <div class="card-body">
                             <!-- rating -->
                             <div>
@@ -213,9 +223,11 @@
                         </div>
                     </div>
                     <!-- kitchen item -3 -->
-                    <div onclick="countItems('Furniture-item-3-name','Furniture-item-3-price')" class="card  shadow-xl text-center px-10 py-5 bg-white">
-                        <img class="bg-[#1111110D] w-[300px] h-[200px] p-10 rounded-md  mx-auto " src="images/prod9.png"
+                    <div onclick="countItems('Furniture-item-3-name','Furniture-item-3-price')" class="card  shadow-xl text-center h-[300px] w-[250px] px-3 py-3 bg-white">
+                        <div class="bg-[#1111110D] rounded-md">
+                            <img class="mx-auto h-32 w-28" src="images/prod9.png"
                             alt="Shoes" />
+                        </div>
                         <div class="card-body">
                             <!-- rating -->
                             <div>
