same html bugs fixs

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- tailwind and daisy ui -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.5.1/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Document</title>
+    <title>Summer sale</title>
     <style>
         .works-sons {
             font-family: 'Work Sans', sans-serif;
