btn problem fixed

--- a/index.html
+++ b/index.html
@@ -272,9 +272,9 @@
                     </div>
                     <hr class="my-4 text-[#1111117F] w-[90%] mx-auto">
                     <!--Purchase -->
-                    <div>
+                    <div class="absolute mx-auto items-center justify-center ">
                         <!-- Open the modal using ID.showModal() method -->
-                        <button id="Purchase-btn" disabled class="btn bg-[#E527B2] text-white w-full mt-5" onclick="my_modal_2.showModal()">Make
+                        <button id="Purchase-btn" disabled class="btn bg-[#E527B2] text-white w-60 " onclick="my_modal_2.showModal()">Make
                             Purchase</button>
                         <dialog id="my_modal_2" class="modal">
                             <form method="dialog" class="modal-box  mx-auto justify-center grid text-center py-10">
